@startuml battle
hide circle
hide methods
skinparam linetype ortho

entity "users" as users {
  * id : BIGINT <<PK>>
  --
  email : VARCHAR(255)
  nickname : VARCHAR(50)
  role : VARCHAR(20)
  status : VARCHAR(20)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "battles" as battles {
  * id : BIGINT <<PK>>
  --
  title : VARCHAR(255)
  summary : VARCHAR(500)
  description : TEXT
  thumbnail_url : VARCHAR(500)
  view_count : INT
  total_participants : BIGINT
  target_date : DATE
  audio_duration : INT
  status : VARCHAR(20)
  creator_type : VARCHAR(10)
  creator_id : BIGINT <<FK, nullable>>
  is_editor_pick : BOOLEAN
  comment_count : BIGINT
  deleted_at : TIMESTAMP
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "battle_options" as battle_options {
  * id : BIGINT <<PK>>
  --
  battle_id : BIGINT <<FK>>
  label : VARCHAR(10)
  title : VARCHAR(100)
  stance : VARCHAR(255)
  representative : VARCHAR(100)
  vote_count : BIGINT
  image_url : VARCHAR(500)
  display_order : INT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

users ||--o{ battles : creates
battles ||--o{ battle_options : has

note right of battles
  Battle 도메인 전용 테이블
  - 퀴즈/폴 필드와 분리됨
  - target_date는 서버 정책으로 자동 관리
end note

@enduml
